UC2: Add local aggregates